--- a/src/home.html
+++ b/src/home.html
@@ -21,10 +21,14 @@
     <div class="container mx-auto w-3/4 hidden" id="searchContainer">
         <div class="row py-4 flex justify-between space-x-2">
             <div class="col w-full md:w-1/2 mb-4 md:mb-0">
-                <input id="searchBox" class="form-control bg-transparent text-white border border-white rounded p-2 w-full" type="text" placeholder="Search By Name">
+                <input id="searchBox"
+                    class="form-control bg-transparent text-white border border-white rounded p-2 w-full" type="text"
+                    placeholder="Search By Name">
             </div>
             <div class="col w-full md:w-1/2">
-                <input id="letterBox" maxlength="1" class="form-control bg-transparent text-white border border-white rounded p-2 w-full" type="text" placeholder="Search By First Letter">
+                <input id="letterBox" maxlength="1"
+                    class="form-control bg-transparent text-white border border-white rounded p-2 w-full" type="text"
+                    placeholder="Search By First Letter">
             </div>
         </div>
     </div>
@@ -45,8 +49,9 @@
 
 
     <div class="side-nav-menu min-h-screen fixed top-0 left-0 flex z-50">
-        <!-- القائمة الجانبية -->
-        <div class="nav-tab hidden flex-col flex justify-between min-h-screen p-4 bg-gray-800 text-white transition-all">
+
+        <div
+            class="nav-tab hidden flex-col flex justify-between min-h-screen p-4 bg-gray-800 text-white transition-all duration-500 ease-in-out">
             <div class="links">
                 <ul class="list-unstyled overflow-hidden">
                     <li onclick="showSearchInputs(); closeSideNav()" class="py-2 cursor-pointer">Search</li>
@@ -68,7 +73,7 @@
             </div>
         </div>
 
-        <!-- رأس القائمة الجانبية -->
+
         <div class="nav-header flex flex-col justify-between py-4 text-center px-2 bg-white text-black">
             <img class="logo mx-auto w-11" src="img/logo.png" alt="Logo">
             <i class="fas fa-bars open-close-icon fa-2x cursor-pointer" onclick="toggleSideNav()"></i>
@@ -86,25 +91,15 @@
     <section class="py-8">
         <div class="container mx-auto galary">
 
-
-            <div class="hidden">
-                <div class="flex space-x-3 top-5 h-10">
-                    <input type="text" id="searchBox" class="border border-gray-300 rounded-lg w-1/2"
-                        placeholder="Search for a meal...">
-                    <input type="text" id="letterBox" class="border border-gray-300 p-2 rounded-lg w-1/2"
-                        placeholder="Search by first letter...">
-                </div>
-            </div>
-
-
             <div id="rowData" class="box-imgs flex flex-wrap ">
 
             </div>
 
         </div>
 
-
     </section>
+
+
 
 
 
